WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32703
[GTK] Compile warning from line 29 of GRefPtr.cpp
https://bugs.webkit.org/show_bug.cgi?id=32703
Summary
[GTK] Compile warning from line 29 of GRefPtr.cpp
Martin Robinson
Reported
2009-12-18 01:33:58 PST
Control reaches end of non-void function.
Attachments
Fix for this issue
(1.45 KB, patch)
2009-12-18 02:27 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2009-12-18 02:27:31 PST
Created
attachment 45132
[details]
Fix for this issue Ouch. Patch attached.
WebKit Review Bot
Comment 2
2009-12-18 02:28:01 PST
style-queue ran check-webkit-style on
attachment 45132
[details]
without any errors.
WebKit Commit Bot
Comment 3
2009-12-18 02:37:59 PST
Comment on
attachment 45132
[details]
Fix for this issue Clearing flags on attachment: 45132 Committed
r52304
: <
http://trac.webkit.org/changeset/52304
>
WebKit Commit Bot
Comment 4
2009-12-18 02:38:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug