2009-12-18  Martin Robinson  <martin.james.robinson@gmail.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Compile warning from line 29 of GRefPtr.cpp
        https://bugs.webkit.org/show_bug.cgi?id=32703

        Fix memory leak and compiler warning in GRefPtr GHashTable template
        specialization.

        * wtf/gtk/GRefPtr.cpp:
        (WTF::refGPtr):

Canonical link: https://commits.webkit.org/43727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52304 268f45cc-cd09-0410-ab3c-d52691b4dbfc